prevent overflow due to carousel arrows

--- a/src/index.css
+++ b/src/index.css
@@ -239,6 +239,7 @@ button:focus-visible , .button:focus-visible, .button:focus {
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+  color: white;
 }
 
 
@@ -498,8 +499,8 @@ button:focus-visible , .button:focus-visible, .button:focus {
   color: black
 }
 
-.slick-prev { left: -35px; }
-.slick-next { right: -35px; }
+.slick-prev { left: 0px; }
+.slick-next { right: 0px; }
 .PS_card {
   margin: 15px; /* Ajoutez une marge à gauche et à droite */
 }
